# AuroraViz

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
examples/: gallery.py  quickstart.py
src/auroraviz/: charts.py  theme.py
src/auroraviz/styles/: aurora-dark.mplstyle  aurora.mplstyle  fonts.md
