[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auroraviz"
version = "0.1.1"
description = "A clean, modern Python visualization library with curated palettes and minimal ink."
readme = "README.md"
authors = [{ name = "Gyanankur Baruah", email = "gyanankur9@gmail.com" }]
license = "MIT"
license-files = ["LICENSE*"]
requires-python = ">=3.9"
dependencies = ["matplotlib>=3.7", "numpy>=1.24", "pandas>=2.0"]
keywords = ["visualization", "charts", "matplotlib", "data viz", "design"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Visualization"
]

[project.urls]
Homepage = "github.com"
Source = "github.com"

[tool.setuptools.packages.find]
where = ["src"]
